apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  ports:
    - port: 8080
      targetPort: 8080
  #      nodePort: 30001
  selector:
    app: nginx
